feat: return original metadata values for requested url
